# pywbgt

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run-jupyter.sh  setup.cfg  setup.py  update_dockerfile.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  pywbgt.rst  seus_hvi_wbgt.plotting.rst  seus_hvi_wbgt.rst  seus_hvi_wbgt.tools.rst  seus_hvi_wbgt.wbgt.rst  tests.rst
pywbgt/: __init__.py  bernard.pyx  cliljegren.pxd  dimiceli.py  liljegren.pyx  natural_wetbulb.py  ono.py  psychrometric_wetbulb.pyx  spa.pyx
pywbgt/plotting/: plot_by_hue.py
pywbgt/src/: spa_c.c  spa_c.h
pywbgt/utils/: stats.py
seus_hvi_wbgt/: __init__.py  data_io.py  download_era5_ssrd.py  filterStations.py  filter_stations.py  get_isd_data.py  utils.py
seus_hvi_wbgt/plotting/: plot_by_hue.py  utils.py
seus_hvi_wbgt/readers/: noaa_isd.py
seus_hvi_wbgt/tools/: gui.py
seus_hvi_wbgt/validation/: __init__.py  all_tests.py  bernard_tests.py  dimiceli_tests.py  dimiceli_tests_ref.py  ideal_obs_tests.py  idealized_tests.py  liljegren_tests.py  natural_wetbulb_tests.py  utils.py  wbgt_by_rh_method.py  wbgt_by_solar_method.py  wbgt_by_station_method.py  wbgt_by_wind_method.py  wbgt_tests.py  wetbulb_tests.py
seus_hvi_wbgt/wbgt/: __init__.py  bernard.py  bernard.pyx  calc.py  cliljegren.pxd  constants.py  cspa.pxd  dimiceli.py  iribarne.pyx  liljegren.c  liljegren.html  liljegren.pyx  loglaw.py  natural_wetbulb.py  ono.py  psychrometric_wetbulb.py  spa.pyx  stull.py  utils.py  wetbulb.py
seus_hvi_wbgt/wbgt/src/: liljegren.c  liljegren.c.old  liljegren_c.c  spa.c  spa.h
src/pywbgt/: __init__.py  bernard.c  bernard.pyx  calc.py  cliljegren.pxd  constants.py  dimiceli.py  dimiceli_nws.py  liljegren.c  liljegren.pyx  natural_wetbulb.py  psychrometric_wetbulb.c  psychrometric_wetbulb.pyx  solar.py  spa.c  utils.py
src/pywbgt/src/: liljegren_c.c
src/seus_hvi_wbgt/: __init__.py
src/seus_hvi_wbgt/plotting/: utils.py
src/seus_hvi_wbgt/tools/: gui.py
src/seus_hvi_wbgt/wbgt/: cspa.pxd
tests/: __init__.py  all_tests.py  dimiceli_chtf_fitting.py  dimiceli_tests.py  dimiceli_tests_ref.py  ideal_obs_tests.py  idealized_tests.py  isd_data_dl_format.py  liljegren_tests.py  natural_wetbulb_tests.py  test_bernard.py  test_dimiceli.py  test_liljegren.py  test_ono.py  test_ono.py.backup  test_spa.py  wbgt_by_rh_method.py  wetbulb.py  wetbulb_tests.py
validation/: dimiceli_tests.py  liljegren_tests.py  wbgt_by_solar_method.py
