[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name        = "pywbgt"
version     = "1.5.0"
description = "Package for estimating wetbulb globe temperature using various algorithms"
readme      = "README.md"
authors     = [
    {name="Kyle R. Wodzicki", email="kwodzicki@cicsnc.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "metpy>=1.5.0",
    "numpy",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*.pyx"]
