[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.24.0,<2.0",
]
build-backend = "setuptools.build_meta"

[project]
name        = "pywbgt"
version     = "2.0.3"
description = "Package for estimating wetbulb globe temperature using various algorithms"
readme      = "README.md"
authors     = [
    {name="Kyle R. Wodzicki", email="kwodzicki@cicsnc.org"},
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0,<2.0",
    "numba>=0.56",
    "metpy>=1.5.0",
    "pandas>=2.0.0",
    "pvlib>=0.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*.pyx", "**/*.c"]
